--- a/about.html
+++ b/about.html
@@ -176,7 +176,7 @@
 </div>
 
 <!-- page title -->
-<section class="page-title-section overlay" data-background="images/backgrounds/product.png">
+<section class="page-title-section overlay" data-background="images/banners/1.png">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -244,7 +244,7 @@
 <!-- /funfacts -->
 
 <!-- success story -->
-<section class="section bg-cover" data-background="images/backgrounds/success-story.jpg">
+<section class="section bg-cover" data-background="images/backgrounds/1.png">
   <div class="container">
     <div class="row">
       <div class="col-lg-6 col-sm-4 position-relative success-video">
@@ -357,7 +357,7 @@
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -366,7 +366,7 @@
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -375,7 +375,7 @@
           <h4 class="text-white mb-5">SUPPORT</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -384,7 +384,7 @@
           <h4 class="text-white mb-5">RECOMMEND</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
