--- a/contact.html
+++ b/contact.html
@@ -239,7 +239,7 @@
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -248,7 +248,7 @@
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -257,7 +257,7 @@
           <h4 class="text-white mb-5">SUPPORT</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -266,7 +266,7 @@
           <h4 class="text-white mb-5">RECOMMEND</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
