--- a/gallery.html
+++ b/gallery.html
@@ -165,7 +165,7 @@
 </div>
 
 <!-- page title -->
-<section class="page-title-section overlay" data-background="images/backgrounds/product.png">
+<section class="page-title-section overlay" data-background="images/banners/3.png">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -286,7 +286,7 @@
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -295,7 +295,7 @@
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -304,7 +304,7 @@
           <h4 class="text-white mb-5">SUPPORT</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -313,7 +313,7 @@
           <h4 class="text-white mb-5">RECOMMEND</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
