--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
   <!-- venobox popup -->
   <link rel="stylesheet" href="plugins/venobox/venobox.css">
 
+  <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+
   <!-- Main Stylesheet -->
   <link href="css/style.css" rel="stylesheet">
 
@@ -201,8 +203,8 @@
       <div class="hero-slider-item">
         <div class="row">
           <div class="col-md-8">
-            <h1 class="text-white" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <h1 data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
+            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
@@ -214,8 +216,8 @@
       <div class="hero-slider-item">
         <div class="row">
           <div class="col-md-8">
-            <h1 class="text-white" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p class="text-muted mb-4" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <h1 data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
+            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
@@ -227,8 +229,8 @@
       <div class="hero-slider-item">
         <div class="row">
           <div class="col-md-8">
-            <h1 class="text-white" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <h1 data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
+            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
@@ -242,7 +244,7 @@
 <!-- /hero slider -->
 
 <!-- banner-feature -->
-<section class="bg-gray overflow-md-hidden">
+<!-- <section class="bg-gray overflow-md-hidden">
   <div class="container-fluid p-0">
     <div class="row no-gutters">
       <div class="col-xl-4 col-lg-5 align-self-end">
@@ -267,7 +269,7 @@
           <div class="col-sm-6 col-xl-5 mb-xl-5 mb-lg-3 mb-4 text-center text-sm-left">
             <img src="images/icons/3.png"  alt="countertops" width="80" height="80" />
             <br> <br>
-            <h3 class="mb-xl-4 mb-lg-3 mb-4">Counter Tops</h3>
+            <h3 class="mb-xl-4 mb-lg-3 mb-4">Quartz</h3>
             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore
               et dolore magna aliqua. Ut enim ad</p>
           </div>
@@ -282,8 +284,73 @@
       </div>
     </div>
   </div>
-</section>
+</section> -->
 <!-- /banner-feature -->
+
+<section class="section">
+  <div class="container-fluid">
+    <div class="row align-items-center">
+      <div class="col-md-4 order-2 order-md-1">
+        <img class="img-fluid w-100" src="images/banner/banner-feature.png" alt="about image">
+      </div>
+      <div class="col-md-8 order-1 order-md-2 mb-4 mb-md-0">
+        <div class="row">
+          <div class="col-lg-6 col-sm-6 w3-animate-zoom">
+            <div class="card p-0 border-primary rounded-0 hover-shadow">
+              <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/icons/1.png" alt="course thumb">
+              <div class="card-body">
+                <a href="product.html">
+                  <h4 class="card-title">Marbles</h4>
+                </a>
+                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-6 w3-animate-zoom">
+            <div class="card p-0 border-primary rounded-0 hover-shadow">
+              <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/icons/2.png" alt="course thumb">
+              <div class="card-body">
+                <a href="product.html">
+                  <h4 class="card-title">Granite</h4>
+                </a>
+                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+        <br>
+        <div class="row">
+          <div class="col-lg-6 col-sm-6 w3-animate-zoom">
+            <div class="card p-0 border-primary rounded-0 hover-shadow">
+              <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/icons/3.png" alt="course thumb">
+              <div class="card-body">
+                <a href="product.html">
+                  <h4 class="card-title">Quartz</h4>
+                </a>
+                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p>
+              </div>
+            </div>
+          </div>
+          <div class="col-lg-6 col-sm-6 w3-animate-zoom">
+            <div class="card p-0 border-primary rounded-0 hover-shadow">
+              <img class="card-img-top rounded-0" style="width: 60px; margin-left: 20px; margin-top: 10px;" src="images/icons/4.png" alt="course thumb">
+              <div class="card-body">
+                <a href="product.html">
+                  <h4 class="card-title">Sinks</h4>
+                </a>
+                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 
 <!-- about us -->
 <section class="section">
@@ -335,7 +402,7 @@
       <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -348,7 +415,7 @@
       <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Quartz</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -374,7 +441,7 @@
       <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -387,7 +454,7 @@
       <img class="card-img-top rounded-0" src="images/design/1.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Quartz</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -427,7 +494,7 @@
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -436,7 +503,7 @@
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -445,7 +512,7 @@
           <h4 class="text-white mb-5">SUPPORT</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
@@ -454,7 +521,7 @@
           <h4 class="text-white mb-5">RECOMMEND</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="product.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
