--- a/product.html
+++ b/product.html
@@ -161,7 +161,7 @@
 </div>
 
 <!-- page title -->
-<section class="page-title-section overlay" data-background="images/backgrounds/product.png">
+<section class="page-title-section overlay" data-background="images/banners/2.png">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
@@ -213,7 +213,7 @@
       <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -226,7 +226,7 @@
       <img class="card-img-top rounded-0" src="images/design/4.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Quartz</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -252,7 +252,7 @@
       <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -268,7 +268,7 @@
       <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Quartz</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -294,7 +294,7 @@
       <img class="card-img-top rounded-0" src="images/design/1.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -307,7 +307,7 @@
       <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Quartz</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -333,7 +333,7 @@
       <img class="card-img-top rounded-0" src="images/design/4.png" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
-          <h4 class="card-title">Marbles</h4>
+          <h4 class="card-title">Granite</h4>
         </a>
         <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
           incididunt ut labore et dolore magna.</p>
@@ -348,22 +348,6 @@
 
 <!-- footer -->
 <footer>
-  <!-- newsletter -->
-  <div class="newsletter">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-9 ml-auto bg-primary py-5 newsletter-block">
-          <h3 class="text-white">Subscribe Now</h3>
-          <form action="#">
-            <div class="input-wrapper">
-              <input type="email" class="form-control border-0" id="newsletter" name="newsletter" placeholder="Enter Your Email...">
-              <button type="submit" value="send" class="btn btn-primary">Join</button>
-            </div>
-          </form>
-        </div>
-      </div>
-    </div>
-  </div>
   <!-- footer content -->
   <div class="footer bg-footer section border-bottom">
     <div class="container">
@@ -383,39 +367,35 @@
           <h4 class="text-white mb-5">COMPANY</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
-            <li class="mb-3"><a class="text-color" href="teacher.html">Our Teacher</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
             <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
-            <li class="mb-3"><a class="text-color" href="blog.html">Blog</a></li>
           </ul>
         </div>
         <!-- links -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">LINKS</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="courses.html">Courses</a></li>
-            <li class="mb-3"><a class="text-color" href="events.html">Events</a></li>
-            <li class="mb-3"><a class="text-color" href="notice.html">Notice</a></li>
-            <li class="mb-3"><a class="text-color" href="scholarship.html">Scholarship</a></li>
+            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">SUPPORT</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="https://themefisher.com/blog">Forums</a></li>
-            <li class="mb-3"><a class="text-color" href="https://docs.themefisher.com/">Documentation</a></li>
-            <li class="mb-3"><a class="text-color" href="#!">Language</a></li>
-            <li class="mb-3"><a class="text-color" href="#!">Release Status</a></li>
+            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
           <h4 class="text-white mb-5">RECOMMEND</h4>
           <ul class="list-unstyled">
-            <li class="mb-3"><a class="text-color" href="https://themefisher.com/">WordPress</a></li>
-            <li class="mb-3"><a class="text-color" href="https://themefisher.com/">LearnPress</a></li>
-            <li class="mb-3"><a class="text-color" href="https://themefisher.com/">WooCommerce</a></li>
-            <li class="mb-3"><a class="text-color" href="https://themefisher.com/">bbPress</a></li>
+            <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
+            <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
+            <li class="mb-3"><a class="text-color" href="contact.html">Contact</a></li>
           </ul>
         </div>
       </div>
@@ -431,7 +411,7 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            , designed & developed by <a href="https://themefisher.com/" class="text-muted">Themefisher</a>
+            , designed & developed by <a href="http://amoriotech.com/" class="text-muted">Amorio Technologies</a>
           </p>
         </div>
         <div class="col-sm-5 text-sm-right text-center">
