--- a/contact.html
+++ b/contact.html
@@ -214,7 +214,7 @@
 <!-- gmap -->
 <section class="section pt-0">
   <!-- Google Map -->
-  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3886.8967316852304!2d80.25712771527027!3d13.042244816851982!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3a526636a92e1baf%3A0x51af4bc90d6e872c!2sWorkafella%20Alwarpet%20-%20Coworking%20Space%20in%20Chennai!5e0!3m2!1sen!2sin!4v1659521289994!5m2!1sen!2sin" width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3055.6277378608897!2d-74.97941288437487!3d40.01676208779087!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x89c6b4d7bbc028df%3A0xe94c9994b08191ee!2s1300%20Taylors%20Ln%2C%20Cinnaminson%2C%20NJ%2008077%2C%20USA!5e0!3m2!1sen!2sin!4v1659612094645!5m2!1sen!2sin" width="100%" height="550" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </section>
 <!-- /gmap -->
 
@@ -228,10 +228,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
+            <li class="mb-2">phan@absolutegranites.com</li>
           </ul>
         </div>
         <!-- company -->
