--- a/gallery.html
+++ b/gallery.html
@@ -275,10 +275,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
+            <li class="mb-2">phan@absolutegranites.com</li>
           </ul>
         </div>
         <!-- company -->
