--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@
 <section class="section">
   <div class="container-fluid">
     <div class="row align-items-center">
-      <div class="col-md-4 order-2 order-md-1">
+      <div class="col-md-4 order-2 order-md-1 image-animate">
         <img class="img-fluid w-100" src="images/banner/banner-feature.png" alt="about image">
       </div>
       <div class="col-md-8 order-1 order-md-2 mb-4 mb-md-0">
@@ -483,10 +483,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
+            <li class="mb-2">phan@absolutegranites.com</li>
           </ul>
         </div>
         <!-- company -->
@@ -573,6 +573,18 @@
 
 <!-- Main Script -->
 <script src="js/script.js"></script>
+
+<style>
+  
+  .image-animate img {
+    width: 20%;
+    transition: 0.5s all ease-in-out;
+  }
+
+  .image-animate:hover img {
+    transform: scale(1.5);
+  }
+</style>
 
 </body>
 </html>
