--- a/product.html
+++ b/product.html
@@ -184,7 +184,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/1.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m1.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Marbles</h4>
@@ -197,7 +197,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m2.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Marbles</h4>
@@ -210,7 +210,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m3.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Granite</h4>
@@ -223,7 +223,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/4.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m4.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Quartz</h4>
@@ -236,7 +236,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/1.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m5.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Marbles</h4>
@@ -249,7 +249,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m6.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Granite</h4>
@@ -265,7 +265,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m7.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Quartz</h4>
@@ -278,7 +278,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/4.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m8.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Marbles</h4>
@@ -291,7 +291,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/1.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m1.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Granite</h4>
@@ -304,7 +304,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/2.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m2.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Quartz</h4>
@@ -317,7 +317,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/3.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m3.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Marbles</h4>
@@ -330,7 +330,7 @@
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/design/4.png" alt="course thumb">
+      <img class="card-img-top rounded-0" src="images/design/m4.jpg" alt="course thumb">
       <div class="card-body">
         <a href="product.html">
           <h4 class="card-title">Granite</h4>
@@ -356,10 +356,10 @@
           <!-- logo -->
           <a class="logo-footer" href="index.html"><img class="img-fluid mb-4" src="images/logo.png" alt="logo"></a>
           <ul class="list-unstyled">
-            <li class="mb-2">23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">+1 (2) 345 6789</li>
-            <li class="mb-2">contact@yourdomain.com</li>
+            <li class="mb-2">1300 Taylors Lane, Cinnaminson, NJ 08077</li>
+            <li class="mb-2"><strong>Tel:</strong> &nbsp;(856) 786-4888</li>
+            <li class="mb-2"><strong>Fax:</strong> &nbsp;(888) 203-0999</li>
+            <li class="mb-2">phan@absolutegranites.com</li>
           </ul>
         </div>
         <!-- company -->
