--- a/contact.html
+++ b/contact.html
@@ -161,7 +161,7 @@
 </div>
 
 <!-- page title -->
-<section class="page-title-section overlay" data-background="images/backgrounds/contact.png">
+<section class="page-title-section overlay" data-background="images/banners/2.png">
   <div class="container">
     <div class="row">
       <div class="col-md-8">
