--- a/about.html
+++ b/about.html
@@ -60,7 +60,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
-          <a class="text-color mr-3" href="tel:+443003030266"><strong>CALL</strong> +44 300 303 0266</a>
+          <a class="text-color mr-3" href="tel:+(856) 786-4888"><strong>CALL</strong>(856) 786-4888</a>
           <ul class="list-inline d-inline">
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com/themefisher/"><i class="ti-facebook"></i></a></li>
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com/themefisher"><i class="ti-twitter-alt"></i></a></li>
@@ -95,10 +95,10 @@
             <li class="nav-item active">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item @@courses">
+            <li class="nav-item @@product">
               <a class="nav-link" href="product.html">Product</a>
             </li>
-            <li class="nav-item @@events">
+            <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item @@contact">
