--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div class="container">
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
-          <a class="text-color mr-3" href="tel:+443003030266"><strong>CALL</strong> +44 300 303 0266</a>
+          <a class="text-color mr-3" href="tel:+(856) 786-4888"><strong>CALL</strong>(856) 786-4888</a>
           <ul class="list-inline d-inline">
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com/"><i class="ti-facebook"></i></a></li>
             <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com/"><i class="ti-twitter-alt"></i></a></li>
@@ -88,10 +88,10 @@
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item @@courses">
+            <li class="nav-item @@product">
               <a class="nav-link" href="product.html">Product</a>
             </li>
-            <li class="nav-item @@events">
+            <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <!-- <li class="nav-item dropdown view">
@@ -100,14 +100,6 @@
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                 <li><a class="dropdown-item" href="teacher.html">Teacher</a></li>
-                <li><a class="dropdown-item" href="teacher-single.html">Teacher Single</a></li>
-                <li><a class="dropdown-item" href="notice.html">Notice</a></li>
-                <li><a class="dropdown-item" href="notice-single.html">Notice Details</a></li>
-                <li><a class="dropdown-item" href="research.html">Research</a></li>
-                <li><a class="dropdown-item" href="scholarship.html">Scholarship</a></li>
-                <li><a class="dropdown-item" href="course-single.html">Course Details</a></li>
-                <li><a class="dropdown-item" href="event-single.html">Event Details</a></li>
-                <li><a class="dropdown-item" href="blog-single.html">Blog Details</a></li>
                 
                 <li class="dropdown-item dropdown dropleft">
                   <a class="dropdown-toggle" href="#" id="navbarDropdownSubmenu" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
