--- a/contact.html
+++ b/contact.html
@@ -198,11 +198,8 @@
         <p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit recusandae voluptates doloremque veniam temporibus porro culpa ipsa, nisi soluta minima saepe laboriosam debitis nesciunt. Dolore, labore. Accusamus nulla sed cum aliquid exercitationem debitis error harum porro maxime quo iusto aliquam dicta modi earum fugiat, vel possimus commodi, deleniti et veniam, fuga ipsum praesentium. Odit unde optio nulla ipsum quae obcaecati! Quod esse natus quibusdam asperiores quam vel, tempore itaque architecto ducimus expedita</p>
         <div class="row">
           <div class="col-md-6">
-            <a href="tel:+8802057843248" class="text-color h5 d-block">+880 20 5784 3248</a>
-            <a href="mailto:yourmail@email.com" class="mb-5 text-color h5 d-block">yourmail@email.com</a>
-          </div>
-          <div class="col-md-6">
-           <address>23621 15 Mile Rd #C104, Clinton MI, 48035, New York, USA</address>
+            <a href="tel:+8802057843248" class="text-color h5 d-block">(856) 786-4888</a>
+            <a href="mailto:yourmail@email.com" class="mb-5 text-color h5 d-block">phan@absolutegranites.com</a>
           </div>
         </div>
       </div>
