--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
-            <a href="contact.html" class="btn btn-primary" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".7">Shop Collection</a>
+            <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
       </div>
@@ -213,7 +213,7 @@
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
-            <a href="contact.html" class="btn btn-primary" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".7">Shop Collection</a>
+            <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
       </div>
@@ -226,7 +226,7 @@
               tempor
               incididunt ut labore et
               dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
-            <a href="contact.html" class="btn btn-primary" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="zoomIn" data-delay-in=".7">Shop Collection</a>
+            <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="zoomIn" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
       </div>
@@ -483,7 +483,7 @@
         </div>
         <!-- company -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">COMPANY</h4>
+          <h4 class="text-white mb-5">Products</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -492,7 +492,7 @@
         </div>
         <!-- links -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">LINKS</h4>
+          <h4 class="text-white mb-5">Inspiration</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -501,7 +501,7 @@
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">SUPPORT</h4>
+          <h4 class="text-white mb-5">Commercial</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -510,7 +510,7 @@
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">RECOMMEND</h4>
+          <h4 class="text-white mb-5">Free Estimate</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -532,6 +532,13 @@
             </script> 
             , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted">Amorio Technologies</a>
           </p>
+          <br>
+          <div class="row">
+            <div class="col-md-6">
+              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+            </div>
+          </div>
         </div>
         <div class="col-sm-5 text-sm-right text-center">
           <ul class="list-inline">
@@ -567,10 +574,8 @@
 <script src="js/script.js"></script>
 
 <style>
-  
   .image-animate img {
-    width: 20%;
-    transition: 0.5s all ease-in-out;
+    transition: all ease-in-out 0.3s;
   }
 
   .image-animate:hover img {
