--- a/product.html
+++ b/product.html
@@ -448,5 +448,14 @@
 <!-- Main Script -->
 <script src="js/script.js"></script>
 
+<style>
+  img {
+  transition: transform .7s ease-in-out;
+}
+img:hover {
+  transform: rotate(360deg);
+}
+</style>
+
 </body>
 </html>
