--- a/gallery.html
+++ b/gallery.html
@@ -283,7 +283,7 @@
         </div>
         <!-- company -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">COMPANY</h4>
+          <h4 class="text-white mb-5">Products</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -292,7 +292,7 @@
         </div>
         <!-- links -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">LINKS</h4>
+          <h4 class="text-white mb-5">Inspiration</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -301,7 +301,7 @@
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">SUPPORT</h4>
+          <h4 class="text-white mb-5">Commercial</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -310,7 +310,7 @@
         </div>
         <!-- support -->
         <div class="col-lg-2 col-md-3 col-sm-4 col-6 mb-5 mb-md-0">
-          <h4 class="text-white mb-5">RECOMMEND</h4>
+          <h4 class="text-white mb-5">Free Estimate</h4>
           <ul class="list-unstyled">
             <li class="mb-3"><a class="text-color" href="about.html">About Us</a></li>
             <li class="mb-3"><a class="text-color" href="product.html">Product</a></li>
@@ -330,8 +330,15 @@
               var CurrentYear = new Date().getFullYear()
               document.write(CurrentYear)
             </script> 
-            , designed & developed by <a href="http://amoriotech.com/" class="text-muted">Amorio Technologies</a>
+            , designed & developed by <a href="http://amoriotech.com/" target="_blank" class="text-muted">Amorio Technologies</a>
           </p>
+          <br>
+          <div class="row">
+            <div class="col-md-6">
+              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+            </div>
+          </div>
         </div>
         <div class="col-sm-5 text-sm-right text-center">
           <ul class="list-inline">
