--- a/index.html
+++ b/index.html
@@ -535,8 +535,8 @@
           <br>
           <div class="row">
             <div class="col-md-6">
-              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+              <a href="#"  class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+              <a href="#" class="text-muted" style="font-size: 11px;">Terms of Use</a>
             </div>
           </div>
         </div>
