--- a/product.html
+++ b/product.html
@@ -416,8 +416,8 @@
           <br>
           <div class="row">
             <div class="col-md-6">
-              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-              <a href="#" target="_blank" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+              <a href="#" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+              <a href="#" class="text-muted" style="font-size: 11px;">Terms of Use</a>
             </div>
           </div>
         </div>
@@ -459,7 +459,7 @@
   transition: transform .7s ease-in-out;
 }
 img:hover {
-  transform: rotate(360deg);
+  transform: scale(1.5);
 }
 </style>
 
