--- a/contact.html
+++ b/contact.html
@@ -80,8 +80,16 @@
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
             </li>
-            <li class="nav-item @@product">
-              <a class="nav-link" href="product.html">Product</a>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Product
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="product.html">Marbles</a></li>
+                <li><a class="dropdown-item" href="product.html">Granite</a></li>
+                <li><a class="dropdown-item" href="product.html">Quartz</a></li>
+                <li><a class="dropdown-item" href="product.html">Quartzite</a></li>
+              </ul>
             </li>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
