--- a/appartment.html
+++ b/appartment.html
@@ -79,41 +79,40 @@
             </li>
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
-            </li>
-            <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Product
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
-                <li><a class="dropdown-item" href="granite.html">Granite</a></li>
-                <li><a class="dropdown-item" href="quartz.html">Quartz</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Inspiration
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="marble.html">Kitchen</a></li>
-                <li><a class="dropdown-item" href="granite.html">Bathroom</a></li>
-                <li><a class="dropdown-item" href="quartz.html">Bar &amp; Entertainment</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Fireplace &amp; Outdoor Kitchen</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Boat &amp; Yacht</a></li>
-              </ul>
-            </li>
-            <li class="nav-item dropdown view">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                Commercial
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
-                <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
-                <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
-                <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
-              </ul>
-            </li>
+              <li class="nav-item dropdown view">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Product
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
+                  <li><a class="dropdown-item" href="granite.html">Granite</a></li>
+                  <li><a class="dropdown-item" href="quartz.html">Quartz</a></li>
+                  <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown view">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Inspiration
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
+                  <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
+                  <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
+                  <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
+                  <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
+                </ul>
+              </li>
+              <li class="nav-item dropdown view">
+                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Commercial
+                </a>
+                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                  <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
+                  <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
+                  <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
+                  <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
+                </ul>
+              </li>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
