--- a/restaurant.html
+++ b/restaurant.html
@@ -96,11 +96,11 @@
                 Inspiration
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="marble.html">Kitchen</a></li>
-                <li><a class="dropdown-item" href="granite.html">Bathroom</a></li>
-                <li><a class="dropdown-item" href="quartz.html">Bar &amp; Entertainment</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Fireplace &amp; Outdoor Kitchen</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Boat &amp; Yacht</a></li>
+                <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
+                <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
+                <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
+                <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
+                <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
               </ul>
             </li>
             <li class="nav-item dropdown view">
@@ -108,11 +108,10 @@
                 Commercial
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="marble.html">Bar &amp; Restaurant</a></li>
-                <li><a class="dropdown-item" href="granite.html">Hotel</a></li>
-                <li><a class="dropdown-item" href="quartz.html">Apartments &amp; Condos</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Fireplace &amp; Outdoor Kitchen</a></li>
-                <li><a class="dropdown-item" href="quartzite.html">Office &amp; Retail</a></li>
+                <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
+                <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
+                <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
+                <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
               </ul>
             </li>
             <li class="nav-item @@gallery">
