--- a/index.html
+++ b/index.html
@@ -230,10 +230,10 @@
         <div class="row">
           <div class="col-md-8">
             <h1 data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <!-- <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p> -->
             <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutRight" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInLeft" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
@@ -243,10 +243,10 @@
         <div class="row">
           <div class="col-md-8">
             <h1 data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <!-- <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p> -->
             <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutUp" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInDown" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
@@ -256,10 +256,10 @@
         <div class="row">
           <div class="col-md-8">
             <h1 data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".1">Marble & Granite Countertop Installation at a Price You Can Afford</h1>
-            <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+            <!-- <p style="color: #000 !important;" class="text-muted mb-4" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="fadeInUp" data-delay-in=".4">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
               tempor
               incididunt ut labore et
-              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p>
+              dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exer</p> -->
             <a href="product.html" class="btn btn-primary" data-animation-out="fadeOutDown" data-delay-out="5" data-duration-in=".3" data-animation-in="zoomIn" data-delay-in=".7">Shop Collection</a>
           </div>
         </div>
@@ -328,8 +328,8 @@
                 <a href="product.html">
                   <h4 class="card-title">Marbles</h4>
                 </a>
-                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p>
+                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p> -->
               </div>
             </div>
           </div>
@@ -340,8 +340,8 @@
                 <a href="product.html">
                   <h4 class="card-title">Granite</h4>
                 </a>
-                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p>
+                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p> -->
               </div>
             </div>
           </div>
@@ -355,8 +355,8 @@
                 <a href="product.html">
                   <h4 class="card-title">Quartz</h4>
                 </a>
-                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p>
+                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p> -->
               </div>
             </div>
           </div>
@@ -367,8 +367,8 @@
                 <a href="product.html">
                   <h4 class="card-title">Sinks</h4>
                 </a>
-                <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
-                  incididunt ut labore et dolore magna.</p>
+                <!-- <p class="card-text mb-4"> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor
+                  incididunt ut labore et dolore magna.</p> -->
               </div>
             </div>
           </div>
