--- a/office.html
+++ b/office.html
@@ -211,6 +211,9 @@
   <div class="container">
     <!-- course list -->
 <div class="row justify-content-center">
+  <div class="col-lg-12 col-sm-12 mb-5">
+    <p>Absolute Marble & Granite provides stone countertops, conference tables, flooring in office and retail business environments. With a vast selection of stone and environmentally friendly materials we can fabricate and install any application at a competitive price and timely delivery. We work with architects, designers, builders, retailers and property management companies every day.</p>
+  </div>
   <!-- course item -->
   <div class="col-lg-3 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
