--- a/restaurant.html
+++ b/restaurant.html
@@ -211,6 +211,9 @@
   <div class="container">
     <!-- course list -->
 <div class="row justify-content-center">
+  <div class="col-lg-12 col-sm-12 mb-5">
+    <p>Absolute Marble and Granite designs, fabricates and installs any type of stone product for bars, restaurants, night clubs, and more. Our commercial division has installed 1,000′s of granite, marble, quartz, recycled glass and tile projects at locations in Philadelphia, NYC, Pennsylvania, New Jersey, Maryland and Delaware. We pride ourselves on offering the latest and greatest in material choices in addition to professional and timely installation.</p>
+  </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
