--- a/appartment.html
+++ b/appartment.html
@@ -210,6 +210,9 @@
   <div class="container">
     <!-- course list -->
 <div class="row justify-content-center">
+  <div class="col-lg-12 col-sm-12 mb-5">
+    <p>Absolute Marble & Granite’s commercial division specializes in multifamily apartment and condo projects. We work on rehab projects and new construction.</p>
+  </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
