--- a/hotel.html
+++ b/hotel.html
@@ -211,6 +211,10 @@
   <div class="container">
     <!-- course list -->
 <div class="row justify-content-center">
+  <div class="col-lg-12 col-sm-12 mb-5">
+    <p>Absolute Marble & Granite commercial division offers hotel owners superior service and aggressive volume pricing on hotel room bathroom vanities, countertops, wall and floor tiles.
+    </p>
+  </div>
   <!-- course item -->
   <div class="col-lg-4 col-sm-6 mb-5">
     <div class="card p-0 border-primary rounded-0 hover-shadow">
