--- a/estimate.html
+++ b/estimate.html
@@ -310,8 +310,8 @@
           <br>
           <div class="row">
             <div class="col-md-6">
-              <a href="#" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
-              <a href="#" class="text-muted" style="font-size: 11px;">Terms of Use</a>
+              <a href="privacy_policy.html" class="text-muted" style="font-size: 11px;">Privacy Policy</a> &nbsp;
+              <a href="terms_use.html" class="text-muted" style="font-size: 11px;">Terms of Use</a>
             </div>
           </div>
         </div>
