--- a/terms_use.html
+++ b/terms_use.html
@@ -46,13 +46,14 @@
       <div class="row no-gutters">
         <div class="col-lg-4 text-center text-lg-left">
           <a class="text-color mr-3" href="tel:+(856) 786-4888"><strong>CALL</strong>(856) 786-4888</a>
+          
         </div>
         <div class="col-lg-8 text-center text-lg-right">
           <ul class="list-inline d-inline">
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com"><i class="ti-facebook"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com"><i class="ti-twitter-alt"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://github.com"><i class="ti-github"></i></a></li>
-            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com"><i class="ti-instagram"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://facebook.com/"><i class="ti-facebook"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://twitter.com/"><i class="ti-twitter-alt"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://github.com/"><i class="ti-github"></i></a></li>
+            <li class="list-inline-item mx-0"><a class="d-inline-block p-2 text-color" href="https://instagram.com/"><i class="ti-instagram"></i></a></li>
           </ul>
         </div>
       </div>
@@ -75,47 +76,48 @@
             </li>
             <li class="nav-item @@about">
               <a class="nav-link" href="about.html">About</a>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Product
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
-                  <li><a class="dropdown-item" href="granite.html">Granite</a></li>
-                  <li><a class="dropdown-item" href="quartz.html">Quartz</a></li>
-                  <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Inspiration
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
-                  <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
-                  <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
-                  <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
-                  <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
-                </ul>
-              </li>
-              <li class="nav-item dropdown view">
-                <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Commercial
-                </a>
-                <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
-                  <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
-                  <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
-                  <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
-                </ul>
-              </li>
+            </li>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Product
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="marble.html">Marbles</a></li>
+                <li><a class="dropdown-item" href="granite.html">Granite</a></li>
+                <li><a class="dropdown-item" href="quartz.html">Quartz</a></li>
+                <li><a class="dropdown-item" href="quartzite.html">Quartzite</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Inspiration
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="kitchen.html">Kitchen</a></li>
+                <li><a class="dropdown-item" href="bathroom.html">Bathroom</a></li>
+                <li><a class="dropdown-item" href="bar.html">Bar &amp; Entertainment</a></li>
+                <li><a class="dropdown-item" href="fireplace.html">Fireplace &amp; Outdoor Kitchen</a></li>
+                <li><a class="dropdown-item" href="boat.html">Boat &amp; Yacht</a></li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown view">
+              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Commercial
+              </a>
+              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                <li><a class="dropdown-item" href="restaurant.html">Bar &amp; Restaurant</a></li>
+                <li><a class="dropdown-item" href="hotel.html">Hotel</a></li>
+                <li><a class="dropdown-item" href="appartment.html">Apartments &amp; Condos</a></li>
+                <li><a class="dropdown-item" href="office.html">Office &amp; Retail</a></li>
+              </ul>
+            </li>
             <li class="nav-item @@gallery">
               <a class="nav-link" href="gallery.html">Gallery</a>
             </li>
             <li class="nav-item @@freeestimate">
-              <a class="nav-link" href="estimate.html">FreeEstimate</a>
+              <a class="nav-link active" href="estimate.html">FreeEstimate</a>
             </li>
-            <li class="nav-item @@contact">
+            <li class="nav-item">
               <a class="nav-link" href="contact.html">CONTACT</a>
             </li>
           </ul>
@@ -196,7 +198,7 @@
       <div class="col-md-8">
         <ul class="list-inline custom-breadcrumb mb-2">
           <li class="list-inline-item"><a class="h2 text-primary font-secondary" href="index.html">Home</a></li>
-          <li class="list-inline-item text-white h3 font-secondary nasted">Apartments &amp; Condos</li>
+          <li class="list-inline-item text-white h3 font-secondary nasted">Terms of Use</li>
         </ul>
       </div>
     </div>
@@ -204,58 +206,38 @@
 </section>
 <!-- /page title -->
 
-<!-- courses -->
-<section class="section">
+<!-- contact -->
+<section class="section bg-gray">
   <div class="container">
-    <!-- course list -->
-<div class="row justify-content-center">
-  <div class="col-lg-12 col-sm-12 mb-5">
-    <p>Absolute Marble & Granite’s commercial division specializes in multifamily apartment and condo projects. We work on rehab projects and new construction.</p>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/1.jpg" alt="course thumb">
-      <!-- <div class="card-body">
-        <a href="product.html">
-          <h4 class="card-title">Bianco Venatino</h4>
-        </a>
-      </div> -->
+    <div class="row">
+      <div class="col-lg-12">
+        <h2 class="section-title">Terms of Use</h2>
+      </div>
     </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/2.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/3.jpg" alt="course thumb">
-    </div>
-  </div>
-   <!-- course item -->
-   <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/4.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/5.jpg" alt="course thumb">
-    </div>
-  </div>
-  <!-- course item -->
-  <div class="col-lg-4 col-sm-6 mb-5">
-    <div class="card p-0 border-primary rounded-0 hover-shadow">
-      <img class="card-img-top rounded-0" src="images/appartment/6.jpg" alt="course thumb">
-    </div>
-  </div>
+    <!-- <div class="row">
+      <div class="col-lg-6 mb-4 mb-lg-0">
+      <script charset="utf-8" type="text/javascript" src="//js.hsforms.net/forms/v2.js"></script>
+        <script>
+          hbspt.forms.create({
+            region: "na1",
+            portalId: "22675730",
+            formId: "15c02c7f-9af4-4cab-93cb-67dc5899a162",
+            version: "V2_PRERELEASE"
+          });
+        </script>
+      </div>
+      <div class="col-lg-6">
+         <img src="images/estimate.jpg" alt="estimate_image" width="500" height="400">
+         <br><br>
+         <p>Get Started on your dream kitchen or bathroom.</p>
+         <p>We will measure your room, discuss design ideas and help you select products. We provide this service <strong>absolutely free</strong> of charge with no obligation, so you have nothing to lose and everything to learn!.</p>
+         
+      </div>
+    </div> -->
   </div>
 </section>
-<!-- /courses -->
+<!-- /contact -->
+<br>
 
 <!-- footer -->
 <footer>
@@ -369,15 +351,6 @@
 <!-- Start of HubSpot Embed Code -->
   <script type="text/javascript" id="hs-script-loader" async defer src="//js-na1.hs-scripts.com/22675730.js"></script>
 <!-- End of HubSpot Embed Code -->
-
-<style>
-  img {
-  transition: transform .7s ease-in-out;
-}
-img:hover {
-  transform: scale(1.5);
-}
-</style>
 
 </body>
 </html>
